# gongjiskills

./: .gitignore  CLAUDE.md  README.md  gongji.py  install.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
core/: auth.py  client.py
docs/: claude-code.md  cli-reference.md  development.md  python-api.md  security.md  介绍.md  预制镜像清单.md
gongjiskills/: __init__.py  auth.py  cli.py  client.py  templates.py
skills/: gongji.md
tests/: test_auth.py  test_cli.py
