[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "gongjiskills"
version = "0.1.0"
description = "共绩算力 GPU 弹性部署 CLI / Skills，供 AI Agent 自动调用"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "cryptography>=3.0",
    "requests>=2.20",
]

[project.scripts]
gongji = "gongjiskills.cli:main"

[project.urls]
Homepage = "https://github.com/shaozheng0503/gongjiskills"
Documentation = "https://www.gongjiyun.com/docs/platform/openapi/zx3iwhbv1i8sxdkeiapcprxhn8d/"

[tool.setuptools.packages.find]
include = ["gongjiskills*"]
